--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit_profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit_profile" novalidate>
+        <input type="text" name="name" id="name__input" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="20" required>
+        <span class = "popup__input-error name__input-error"></span>
+        <input type="text" name="description" id="description__input" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" required>
+        <span class = "popup__input-error description__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +49,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new_place">
-        <input type="text" name="place_name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new_place" novalidate>
+        <input type="text" name="place_name" id="place__input" class="popup__input popup__input_type_card-name" placeholder="Название" required>
+        <span class = "popup__input-error place__input-error"></span>
+        <input type="url" name="link" id="url__input" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <span class = "popup__input-error url__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
