--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new_place" novalidate>
-        <input type="text" name="place_name" id="place__input" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" pattern="^[A-Za-zА-Яа-яЁё\s\-]+$" data-error_message = "Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+        <input type="text" name="place_name" id="place__input" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" 
+        pattern="^[A-Za-zА-Яа-яЁё\s\-]+$" data-error_message = "Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
         <span class = "popup__input-error place__input-error"></span>
         <input type="url" name="link" id="url__input" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
         <span class = "popup__input-error url__input-error"></span>
