--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
       </h2>
       <div class="card__like-container">
         <button type="button" class="card__like-button"></button>
-        <span class="card__like-counter">1</span>
+        <span class="card__like-counter"></span>
       </div>
     </div>
   </li>
