avatar change added

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,17 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_new-avatar popup_is-animated">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="edit_avatar"  novalidate>
+        <input type="url" name="avatar" id="avatar__input" class="popup__input popup__input_type_avatar" placeholder="Укажите ссылку на аватар" required>
+        <span class="avatar__input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_new-card popup_is-animated">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
